# CPL

./: CMakeLists.txt  convex_polygon_library.cpp  readme.md
examples/: opencv_example.cc
include/cpl/: convex_polygon.hh  core.hh  cpl_opencv.hh
test/: test.cc
